# scrapy_selenium_spider

./: .gitignore  Dockerfile  cmd_playwright  cmd_playwright.sh  entrypoint.sh  pyproject.toml  requirements.txt  scrapy.cfg
tunisie/: __init__.py  announce.py  config.json  demo.db  items.py  logger.py  main.py  middlewares.py  parameters.py  pipelines.py  settings.py  test.py
tunisie/spiders/: config.json  tunisie_spider.py
