[tool.poetry]
name = "scrapy_selenium_spider"
version = "0.1.0"
description = ""
authors = ["PhilippeRacicot <10731763+Vaunorage@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
itemadapter = "^0.7.0"
itemloaders = "^1.0.4"
playwright = "^1.24.1"
rich = "^12.5.1"
schedule = "^1.1.0"
Scrapy = "^2.6.2"
selenium = "^4.4.0"
pytest-playwright = "^0.3.0"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
